--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ disqus_awesome: false
 disqus_devel: false
 permalink: /:year/:month/:day/:title.html
 paginate: 7
-google_analytics_code: UA-12495571-3
-url: http://alinux.web.id
-#url: /alinux
-#pet: /alinux
-pet: http://alinux.web.id
+#google_analytics_code: UA-12495571-3
+#url: http://alinux.web.id
+url: /alinux
+pet: /alinux
+#pet: http://alinux.web.id
 exclude:
 - Rakefile
 - README.markdown
