--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-_site/*
-_posts/*
-tags/*
+_site/
+_posts/
+tags/
+_drafts/
+#except
+!_posts/README
+!_drafts/README
+!_posts/2011-03-04-create-own-repo-rhel-6.0-beta-from-iso.markdown
+!_drafts/sample-draft.markdown
+
