--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ _drafts/*
 
 !_posts/README
 !_drafts/README
-!_posts/2011-03-04-create-own-repo-rhel-6.0-beta-from-iso.markdown
+!_posts/2010-10-04-Make-usb-installer-OpenBSD-4.8.markdown
 !_drafts/sample-draft.markdown
 
