--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@ pygments: true
 disqus_awesome: false
 disqus_devel: false
 permalink: /:year/:month/:day/:title.html
-paginate: 7
+paginate: 10
 google_analytics_code: UA-12495571-3
-#url: http://alinux.web.id
-#pet: http://alinux.web.id
-url: /alinux
-pet: /alinux
+url: http://alinux.web.id
+pet: http://alinux.web.id
+#url: /alinux
+#pet: /alinux
 exclude:
 - Rakefile
 - README.markdown
