--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 disqus_awesome: true
 disqus_devel: true
-google_analytics_code: UA-12495571-3
+#google_analytics_code: UA-12495571-3
 permalink: /:year/:month/:day/:title.html
 #permalink: /posts/:title.html
+paginate: 10
 pygments: true
 pet:
 url:
