--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ _posts/*
 
 !_posts/2009-10-01-installation-and-setting-network-freebsd-virtual-box-on-slackware-host.markdown
 !archives/README
+!_posts/README
